# dragon-opengl

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE.txt  README.md
cmake/: fetch_glm.cmake  fetch_stb_image.cmake
include/: attributes.h
src/: main.cpp
src/load-utils/: image.cpp  image.h  load_utils.cpp  load_utils.h
src/pipeline/: scene.cpp  scene.h
src/shaders/flat/: fragment.glsl  vertex.glsl
src/shaders/gouraud/: fragment.glsl  vertex.glsl
src/shaders/normal_mapping/: fragment.glsl  vertex.glsl
